--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"gh-pages": "^1.2.0",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
-		"node-sass": "^4.13.1",
+		"node-sass": "^4.14.1",
 		"parse-github-url": "^1.0.2",
 		"prettier": "^1.14.3",
 		"prettier-webpack-plugin": "^1.1.0",
@@ -56,8 +56,8 @@
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.19.0",
 		"webpack": "^4.42.0",
-		"webpack-cli": "^3.3.0",
-		"webpack-dev-server": "^3.3.1",
+		"webpack-cli": "^3.3.12",
+		"webpack-dev-server": "^3.11.0",
 		"webpack-merge": "^4.2.1"
 	},
 	"babel": {
@@ -70,6 +70,11 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.30",
+		"@fortawesome/free-brands-svg-icons": "^5.14.0",
+		"@fortawesome/free-regular-svg-icons": "^5.14.0",
+		"@fortawesome/free-solid-svg-icons": "^5.14.0",
+		"@fortawesome/react-fontawesome": "^0.1.11",
 		"bootstrap": "^4.3.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
